# graphical_grazer

./: pyproject.toml
notebooks/: test001.ipynb  test001_2.json  test_001.ipynb
src/graphical_grazer/: __main__.py  graph.py  node.py
tests/: test_graphical_grazer.py
