[tool.poetry]
name = "graphical_grazer"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = { version = "^21.11b1", allow-prereleases = true }
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
